@@ -1,0 +1,5 @@
+Kuzmin-like wrapper potential
+=============================
+
+.. autoclass:: galpy.potential.KuzminLikeWrapperPotential
+   :members: __init__
